Fixed spacing issue.

--- a/src/assets/scss/components/_crypto.scss
+++ b/src/assets/scss/components/_crypto.scss
@@ -73,7 +73,7 @@
 
   &__title {
     font-weight: 700;
-    font-size: 2em;
+    font-size: 1.75em;
     text-align: center;
   }
 
